syntax = "proto3";
package celestia.blob.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/celestiaorg/celestia-app/x/blob/types";

// EventPayForBlobs defines an event that is emitted after a pay for blob has
// been processed.
message EventPayForBlobs {
  string signer = 1;
  repeated uint32 blob_sizes = 2;
  repeated bytes namespace_ids = 3;
}
